--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.rohith.realityscanner"
+        applicationId "com.omika.realityscanner"
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
@@ -29,4 +29,17 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
+
+    //recyclerview
+    compile "com.android.support:recyclerview-v7:27.1.1"
+
+    //cardview
+    compile 'com.android.support:cardview-v7:27.1.1'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
+
+    //circle imageview
+    compile 'de.hdodenhof:circleimageview:2.2.0'
 }
