--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,15 +31,15 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.6.1'
 
     //recyclerview
-    compile "com.android.support:recyclerview-v7:27.1.1"
+    implementation "com.android.support:recyclerview-v7:27.1.1"
 
     //cardview
-    compile 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
 
     //circle imageview
-    compile 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
